101/kubernetes/comments-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: localhost:5000/mscomments
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 2001
      targetPort: 2001
