101/kubernetes/eventbus-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
        - name: eventbus
          image: localhost:5000/mseventbus
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-srv
spec:
  selector:
    app: eventbus
  ports:
    - name: msposts
      protocol: TCP
      port: 4005
      targetPort: 4005
