101/kubernetes/moderation-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: localhost:5000/msmoderation
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 2003
      targetPort: 2003
