101/kubernetes/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: msposts
  ports:
    - name: msposts
      protocol: TCP
      port: 2002
      targetPort: 2002
